commit intermediate approach and update hedonic regression code markdown

--- a/old approach/HISTORICAL_HEDONIC_REGRESSION_FOR_PROPERTY_VALUATION.ipynb
+++ b/old approach/HISTORICAL_HEDONIC_REGRESSION_FOR_PROPERTY_VALUATION.ipynb
@@ -1637,50 +1637,88 @@
     "\n",
     "### Key Insights:\n",
     "\n",
-    "**Most Valuable Feature:** Median Income\n",
-    "- Strongest predictor of house value\n",
-    "- Neighborhood quality matters!\n",
+    "**Most Important Features:**\n",
+    "- **RM (Average Rooms):** +$4,439 per additional room (strongest positive impact)\n",
+    "- **NOX (Air Pollution):** -$17,203 per unit increase (strongest negative impact)\n",
+    "- **CHAS (Charles River proximity):** +$2,784 when adjacent to river\n",
     "\n",
-    "**Age Effect:** Varies by feature\n",
-    "- Some areas value historic properties\n",
-    "- Others prefer newer construction\n",
+    "**Model Characteristics:**\n",
+    "- Linear additive model: each feature contributes independently\n",
+    "- Interprets each coefficient as the “implicit price” of that attribute\n",
+    "- Assumes constant marginal effects across all price ranges\n",
     "\n",
     "**Model Strengths:**\n",
-    "- Fully interpretable (we understand every coefficient)\n",
-    "- Fast computation (instant predictions)\n",
-    "- Transparent decision-making\n",
+    "- Fully interpretable (every coefficient has clear economic meaning)\n",
+    "- Fast computation (closed-form OLS solution)\n",
+    "- Transparent decision-making suitable for policy and appraisal contexts\n",
+    "- Established theoretical foundation for later property valuation models\n",
     "\n",
     "**Model Weaknesses:**\n",
-    "- Linear assumption too simplistic\n",
-    "- Misses complex patterns\n",
-    "- ~33% of variation unexplained\n",
+    "- Linear assumption too simplistic for complex housing markets\n",
+    "- Misses non-linear patterns and feature interactions\n",
+    "- Cannot capture threshold effects or spatial dependencies\n",
+    "- ~33% of variation unexplained (R² = 0.669)\n",
     "\n",
     "\n",
     "### **References**\n",
     "\n",
     "**Primary Source:**\n",
-    "```\n",
     "Rosen, S. (1974). \"Hedonic Prices and Implicit Markets: Product\n",
     "Differentiation in Pure Competition,\" Journal of Political Economy,\n",
-    "Vol. 82, No. 1, pp. 34-55.\n",
+    "Vol. 82, No. 1, pp. 34–55.\n",
     "\n",
     "DOI: https://doi.org/10.1086/260169\n",
     "Citations: 10,000+\n",
-    "```\n",
     "\n",
     "**Dataset:**\n",
-    "```\n",
-    "California Housing Dataset\n",
-    "Source: Scikit-learn built-in datasets\n",
-    "Based on: 1990 California census data\n",
-    "Features: 8 property/neighborhood characteristics\n",
-    "Observations: 20,640 block groups\n",
-    "```\n",
+    "Boston Housing Dataset\n",
+    "Source: OpenML / scikit-learn (fetch_openml)\n",
+    "Original: Harrison & Rubinfeld (1978)\n",
+    "\n",
+    "Features: 13 property/neighborhood characteristics\n",
+    "\n",
+    "* CRIM (crime rate)\n",
+    "\n",
+    "* ZN (residential land zoned for lots over 25,000 sq.ft.)\n",
+    "\n",
+    "* INDUS (non-retail business acres per town)\n",
+    "\n",
+    "* CHAS (Charles River dummy variable)\n",
+    "\n",
+    "* NOX (nitric oxide concentration)\n",
+    "\n",
+    "* RM (average number of rooms per dwelling)\n",
+    "\n",
+    "* AGE (proportion of owner-occupied units built prior to 1940)\n",
+    "\n",
+    "* DIS (weighted distances to employment centres)\n",
+    "\n",
+    "* RAD (index of accessibility to radial highways)\n",
+    "\n",
+    "* TAX (full-value property tax rate per $10,000)\n",
+    "\n",
+    "* PTRATIO (pupil–teacher ratio by town)\n",
+    "\n",
+    "* B (proportion of Black population)\n",
+    "\n",
+    "* LSTAT (% lower status of the population)\n",
+    "\n",
+    "Observations: 506 properties\n",
+    "Target: PRICE (median home value in $1000s)\n",
     "\n",
     "**Implementation:**\n",
-    "```\n",
-    "Method: Ordinary Least Squares (OLS) Linear Regression\n",
-    "Library: Scikit-learn (LinearRegression)\n"
+    "- Method: Ordinary Least Squares (OLS) Linear Regression\n",
+    "- Library: scikit-learn (LinearRegression)\n",
+    "- Training Set: 404 samples (80%)\n",
+    "- Test Set: 102 samples (20%)\n",
+    "- Estimation: Closed-form solution β̂ = (X'X)⁻¹X'y\n",
+    "\n",
+    "**Performance Metrics:**\n",
+    "- R² Score: 0.669 (66.9% variance explained)\n",
+    "- Adjusted R²: 0.658\n",
+    "- RMSE: $4,929\n",
+    "- MAE: $3,189\n",
+    "- Model Type: Linear, parametric, interpretable"
    ],
    "metadata": {
     "id": "p1HhGlClTng2"
